--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
             <a class="nav-item nav-link" href="#">Payment & Accounting</a>
             <a class="nav-item nav-link" href="#">Logistics</a>
             <a class="nav-item nav-link" href="#">Customer Services</a>
-            <a class="nav-item nav-link" href="#">Reports</a>
+            <a class="nav-item nav-link" href="#">Pricing</a>
           </div>
         </div>
       </nav>
 </head>
 
 <body>
-    
+    <div id="productList" class="container mt-4"></div>
+
+    <!-- Include Bootstrap JS and Popper.js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
