Added payment page

--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="index.html">Product Inventory <span class="sr-only"></span></a>
+            <a class="nav-item nav-link active" href="index.html">Product Inventory</a>
             <a class="nav-item nav-link" href="payment.html">Payment & Accounting</a>
-            <a class="nav-item nav-link" href="#">Logistics</a>
-            <a class="nav-item nav-link" href="#">Customer Services</a>
-            <a class="nav-item nav-link" href="#">Pricing</a>
+            <a class="nav-item nav-link" href="logistics.html">Logistics</a>
+            <a class="nav-item nav-link" href="customerservice.html">Customer Services</a>
+            <a class="nav-item nav-link" href="pricing.html">Pricing</a>
           </div>
         </div>
       </nav>
 </head>
 
 <body>
-    <section style="background-color: #eee;">
         <div class="container py-5">
           <div class="row justify-content-center mb-3">
             <div class="col-md-12 col-xl-10">
