--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/img%20(4).webp"
+                        <img src="nvidia-logo.webp"
                           class="w-100" />
                         <a href="#!">
                           <div class="hover-overlay">
@@ -39,34 +39,14 @@
                       </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-6">
-                      <h5>Quant trident shirts</h5>
+                      <h5>Nvidia</h5>
                       <div class="d-flex flex-row">
                         <div class="text-danger mb-1 me-2">
-                          <i class="fa fa-star"></i>
-                          <i class="fa fa-star"></i>
-                          <i class="fa fa-star"></i>
-                          <i class="fa fa-star"></i>
                         </div>
-                        <span>310</span>
-                      </div>
-                      <div class="mt-1 mb-0 text-muted small">
-                        <span>100% cotton</span>
-                        <span class="text-primary"> • </span>
-                        <span>Light weight</span>
-                        <span class="text-primary"> • </span>
-                        <span>Best finish<br /></span>
-                      </div>
-                      <div class="mb-2 text-muted small">
-                        <span>Unique design</span>
-                        <span class="text-primary"> • </span>
-                        <span>For men</span>
-                        <span class="text-primary"> • </span>
-                        <span>Casual<br /></span>
+
                       </div>
                       <p class="text-truncate mb-4 mb-md-0">
-                        There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered alteration in some form, by injected humour, or
-                        randomised words which don't look even slightly believable.
+                        TEEEEST
                       </p>
                     </div>
                     <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
@@ -94,7 +74,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/new/img(4).webp"
+                        <img src="amd-logo.webp"
                           class="w-100" />
                         <a href="#!">
                           <div class="hover-overlay">
@@ -104,34 +84,15 @@
                       </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-6">
-                      <h5>Quant olap shirts</h5>
+                      <h5>AMD</h5>
                       <div class="d-flex flex-row">
                         <div class="text-danger mb-1 me-2">
-                          <i class="fa fa-star"></i>
-                          <i class="fa fa-star"></i>
-                          <i class="fa fa-star"></i>
-                          <i class="fa fa-star"></i>
+
                         </div>
-                        <span>289</span>
                       </div>
-                      <div class="mt-1 mb-0 text-muted small">
-                        <span>100% cotton</span>
-                        <span class="text-primary"> • </span>
-                        <span>Light weight</span>
-                        <span class="text-primary"> • </span>
-                        <span>Best finish<br /></span>
-                      </div>
-                      <div class="mb-2 text-muted small">
-                        <span>Unique design</span>
-                        <span class="text-primary"> • </span>
-                        <span>For men</span>
-                        <span class="text-primary"> • </span>
-                        <span>Casual<br /></span>
-                      </div>
+
                       <p class="text-truncate mb-4 mb-md-0">
-                        There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered alteration in some form, by injected humour, or
-                        randomised words which don't look even slightly believable.
+                        Taaaaaaaaaaaaaaaa
                       </p>
                     </div>
                     <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
@@ -159,7 +120,7 @@
                   <div class="row">
                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/new/img(5).webp"
+                        <img src="intel-logo-0.webp"
                           class="w-100" />
                         <a href="#!">
                           <div class="hover-overlay">
@@ -169,34 +130,12 @@
                       </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-6">
-                      <h5>Quant ruybi shirts</h5>
+                      <h5>Intel</h5>
                       <div class="d-flex flex-row">
-                        <div class="text-danger mb-1 me-2">
-                          <i class="fa fa-star"></i>
-                          <i class="fa fa-star"></i>
-                          <i class="fa fa-star"></i>
-                          <i class="fa fa-star"></i>
-                        </div>
-                        <span>145</span>
+
                       </div>
-                      <div class="mt-1 mb-0 text-muted small">
-                        <span>100% cotton</span>
-                        <span class="text-primary"> • </span>
-                        <span>Light weight</span>
-                        <span class="text-primary"> • </span>
-                        <span>Best finish<br /></span>
-                      </div>
-                      <div class="mb-2 text-muted small">
-                        <span>Unique design</span>
-                        <span class="text-primary"> • </span>
-                        <span>For women</span>
-                        <span class="text-primary"> • </span>
-                        <span>Casual<br /></span>
-                      </div>
-                      <p class="text-truncate mb-4 mb-md-0">
-                        There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered alteration in some form, by injected humour, or
-                        randomised words which don't look even slightly believable.
+                        <p class="text-truncate mb-4 mb-md-0">
+                        TEST
                       </p>
                     </div>
                     <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
