Added pricing page

--- a/customerservice.html
+++ b/customerservice.html
@@ -1,3 +1,6 @@
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,6 +23,16 @@
       </nav>
 </head>
 <body>
+    <div class="col-md-6 offset-md-3">
+        <span class="anchor" id="formPayment"></span>
+        <hr class="my-5">
 
+
+        <div class="card card-outline-secondary">
+            <div class="card-body">
+                <h3 class="text-center">Customer Service</h3>
+                
+            </div>
+        </div>
 </body>
 </html>
