--- a/customerservice.html
+++ b/customerservice.html
@@ -27,11 +27,28 @@
         <span class="anchor" id="formPayment"></span>
         <hr class="my-5">
 
-
+        <!-- form card cc payment -->
         <div class="card card-outline-secondary">
             <div class="card-body">
                 <h3 class="text-center">Customer Service</h3>
-                
+                <hr>
+                <form class="form" role="form" autocomplete="off">
+                    <div class="form-group">
+                        <label for="cc_name">Leave a Feedback</label>
+                        <input type="text" class="form-control">
+                    </div>
+
+                    
+                    <hr>
+                    <div class="form-group row">
+                        <div class="col-md-6">
+                            <button type="reset" class="btn btn-default btn-lg btn-block">Cancel</button>
+                        </div>
+                        <div class="col-md-6">
+                            <button type="submit" class="btn btn-success btn-lg btn-block">Submit</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
 </body>
