Changed pricing html to report html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="nav-item nav-link" href="payment.html">Payment & Accounting</a>
             <a class="nav-item nav-link" href="logistics.html">Logistics</a>
             <a class="nav-item nav-link" href="customerservice.html">Customer Services</a>
-            <a class="nav-item nav-link" href="pricing.html">Pricing</a>
+            <a class="nav-item nav-link" href="reports.html">Pricing</a>
           </div>
         </div>
       </nav>
