--- a/customerservice.html
+++ b/customerservice.html
@@ -21,17 +21,54 @@
           </div>
         </div>
       </nav>
+
+      <style>
+        /* Style for chatbox */
+        .chat-container {
+            max-width: 500px;
+            margin: auto;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 5px;
+        }
+
+        .chat-message {
+            margin-bottom: 10px;
+            padding: 10px;
+            border-radius: 5px;
+            background-color: #e0f7fa;
+        }
+
+        .user-message {
+            text-align: right;
+        }
+    </style>
 </head>
 <body>
     <div class="col-md-6 offset-md-3">
         <span class="anchor" id="formPayment"></span>
         <hr class="my-5">
 
+
+        
         <!-- form card cc payment -->
         <div class="card card-outline-secondary">
             <div class="card-body">
                 <h3 class="text-center">Customer Service</h3>
                 <hr>
+                <div class="container">
+                    <div class="chat-container">
+                        <div class="chat-message user-message">It's so sad steve jobs died from ligma</div>
+                        <div class="chat-message">Who the hell is steve jobs?</div>
+                        <div class="chat-message user-message"> Ligma balls</div>
+                        <form class="form mt-3" role="form" autocomplete="off">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Type your message here...">
+                            </div>
+                            <button type="submit" class="btn btn-success">Send</button>
+                        </form>
+                    </div>
+                </div>
                 <form class="form" role="form" autocomplete="off">
                     <div class="form-group">
                         <label for="cc_name">Leave a Feedback</label>
@@ -51,5 +88,10 @@
                 </form>
             </div>
         </div>
+
+    
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
 </body>
 </html>
