--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                       </div>
                       <h6 class="text-success">Free shipping</h6>
                       <div class="d-flex flex-column mt-4">
-                        <button class="btn btn-primary btn-sm" type="button">Details</button>
-                        <button class="btn btn-outline-primary btn-sm mt-2" type="button">
+                        <button class="btn btn-success btn-sm" type="button">Details</button>
+                        <button class="btn btn-outline-success btn-sm mt-2" type="button">
                           Add to wishlist
                         </button>
                       </div>
@@ -102,8 +102,8 @@
                       </div>
                       <h6 class="text-success">Free shipping</h6>
                       <div class="d-flex flex-column mt-4">
-                        <button class="btn btn-primary btn-sm" type="button">Details</button>
-                        <button class="btn btn-outline-primary btn-sm mt-2" type="button">
+                        <button class="btn btn-success btn-sm" type="button">Details</button>
+                        <button class="btn btn-outline-success btn-sm mt-2" type="button">
                           Add to wishlist
                         </button>
                       </div>
@@ -145,8 +145,8 @@
                       </div>
                       <h6 class="text-success">Free shipping</h6>
                       <div class="d-flex flex-column mt-4">
-                        <button class="btn btn-primary btn-sm" type="button">Details</button>
-                        <button class="btn btn-outline-primary btn-sm mt-2" type="button">
+                        <button class="btn btn-success btn-sm" type="button">Details</button>
+                        <button class="btn btn-outline-success btn-sm mt-2" type="button">
                           Add to wishlist
                         </button>
                       </div>
