--- a/reports.html
+++ b/reports.html
@@ -17,6 +17,28 @@
       </div>
     </nav>
 
+    <style>
+        /* Style for chatbox */
+        .chat-container {
+            max-width: 500px;
+            margin: auto;
+            padding: 20px;
+            background-color: #f1f1f1;
+            border-radius: 5px;
+        }
+
+        .chat-message {
+            margin-bottom: 10px;
+            padding: 10px;
+            border-radius: 5px;
+            background-color: #e0f7fa;
+        }
+
+        .user-message {
+            text-align: right;
+        }
+    </style>
+
   </head>
 <body>
   
@@ -34,7 +56,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Sales Report</h5>
                         <p class="card-text">View sales data for a specific period.</p>
-                        <a href="#" class="btn btn-primary">View Report</a>
+                        <a href="#" class="btn btn-success">View Report</a>
                     </div>
                 </div>
             </div>
@@ -43,7 +65,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Inventory Report</h5>
                         <p class="card-text">Check current inventory levels and trends.</p>
-                        <a href="#" class="btn btn-primary">View Report</a>
+                        <a href="#" class="btn btn-success">View Report</a>
                     </div>
                 </div>
             </div>
@@ -52,7 +74,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Statistics</h5>
                         <p class="card-text">Explore statistical data and trends.</p>
-                        <a href="#" class="btn btn-primary">View Statistics</a>
+                        <a href="#" class="btn btn-success">View Statistics</a>
                     </div>
                 </div>
             </div>
